Link authors to their profile pages

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ permalink: /blogs/
     {% assign author = site.authors | where: 'slug', post.author | first %}
     <div class="cell" style="background:#efefef; margin: 10px 0; padding: 10px">
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <address class="author">{{ author.title }}</address>
+      <address class="author"><a href="{{ author.url }}">{{ author.title }}</a></address>
       {{ post.excerpt | strip_html }}
     </div>
     {% endfor %}
