EST-40: Change join our team buttons to links

--- a/company.html
+++ b/company.html
@@ -8,7 +8,7 @@ permalink: "/company/"
 <section id="section-01" class="section our-team">
   <div class="grid-container">
     <h1 class="text-center u-trailer u-text-bold"><strong>We’re on a mission<br></strong> to help people around the world<br><strong>work smarter not harder.</strong></h1>
-    <div class="cell text-center"><button class="button">Join our Team</button></div>
+    <div class="cell text-center"><a href="mailto:jobs@esteemed.io" class="button">Join our Team</a></div>
   </div>
 </section>
 <section id="section-02" class="section our-value">
@@ -127,7 +127,7 @@ permalink: "/company/"
       <div class="cell large-6">
       </div>
       <div class="cell large-6 u-leader">
-        <button class="button">Join our Team</button>
+        <a href="mailto:jobs@esteemed.io" class="button">Join our Team</a>
       </div>
     </div>
     </div>
