--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@ permalink: /blogs/
   <div class="grid-x align-top">
     <h1>Blog</h1>
     {% for post in site.posts %}
-    {% assign author = site.authors | where: 'slug', post.author | first %}
+    {% assign author = site.authors | where: 'relative_path', post.author | first %}
     <div class="cell" style="background:#efefef; margin: 10px 0; padding: 10px">
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
       <address class="author"><a href="{{ author.url }}">{{ author.title }}</a></address>
