--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@ meta:
 permalink: "/"
 ---
 
-<section id="section-02" class="section">
+<section id="section-01" class="section">
   <div class="grid-container">
-    <div class="grid-x align-top">
+    <div class="grid-x grid-padding-x align-top">
       <div class="cell medium-6 small-order-2 medium-order-1">
         <h1 class="u-text-bold main-title">Engage a trusted colleague.</h1>
         <p class="h5 main-text-description">Esteemed finds the team members you need, before you need them, so you can scale with confidence.</p>
         <button class="button">Get Started Now</button>
       </div>
-      <div class="cell medium-6 small-order-2 medium-order-2">
-        <img src="/img/esteemed-workforce-growth.png">
+      <div class="cell medium-6 small-order-1 medium-order-2">
+        <img src="/img/main-hero.svg">
       </div>
     </div>
   </div>
