--- a/blog.html
+++ b/blog.html
@@ -2,12 +2,14 @@
 title: Blogs
 permalink: /blogs/
 sitemap: false
+pagination:
+  enabled: true
 ---
 
 <div class="grid-container">
   <div class="grid-x align-top">
     <h1>Blog</h1>
-    {% for post in site.posts %}
+    {% for post in paginator.posts %}
     {% assign author = site.authors | where: 'relative_path', post.author | first %}
     <div class="cell" style="background:#efefef; margin: 10px 0; padding: 10px">
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
@@ -16,5 +18,21 @@ sitemap: false
     </div>
     {% endfor %}
     </div>
+    {% if paginator.total_pages > 1 %}
+    <ul class="pager">
+        {% if paginator.previous_page %}
+        <li class="previous">
+            <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; Newer Posts</a>
+        </li>
+        {% endif %}
+        {% if paginator.next_page %}
+        <li class="next">
+            <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts &rarr;</a>
+        </li>
+        {% endif %}
+    </ul>
+    {% endif %}
+
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   </div>
 </div>
