--- a/blog.html
+++ b/blog.html
@@ -10,10 +10,10 @@ pagination:
   <div class="grid-x align-top">
     <h1>Blog</h1>
     {% for post in paginator.posts %}
-    {% assign author = site.authors | where: 'relative_path', post.author | first %}
+    {% assign author = site.data.authors[post.author] %}
     <div class="cell" style="background:#efefef; margin: 10px 0; padding: 10px">
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <address class="author"><a href="{{ author.url }}">{{ author.title }}</a></address>
+      <address class="author"><a href="/blogs/author/{{ page.author }}/">{{ author.name }}</a></span></address>
       {{ post.excerpt | strip_html }}
     </div>
     {% endfor %}
