EST-15: Add testimonials slider and theme it

--- a/index.html
+++ b/index.html
@@ -148,6 +148,52 @@ permalink: "/"
   </div>
 </section>
 
+<section id="section-08" class="section">
+  <div class="grid-container">
+    <div class="align-center-middle">
+      <div class="orbit" role="region" aria-label="Favorite Text Ever" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
+        <nav class="orbit-bullets">
+          <button class="is-active" data-slide="0">
+            <span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span>
+            <img src="/img/testimonial_example_logo.png">
+          </button>
+          <button data-slide="1">
+            <span class="show-for-sr">Second slide details.</span>
+            <img src="/img/testimonial_example_logo.png">
+          </button>
+          <button data-slide="2">
+            <span class="show-for-sr">Third slide details.</span>
+            <img src="/img/testimonial_example_logo.png">
+          </button>
+          <button data-slide="3">
+            <span class="show-for-sr">Fourth slide details.</span>
+            <img src="/img/testimonial_example_logo.png">
+          </button>
+        </nav>
+        <div class="orbit-container__wrapper align-center-middle">
+          <div class="orbit-container__quote-left">“</div>
+          <ul class="orbit-container">
+            <li class="orbit-slide text-center">
+              <p>Esteemed is a mobile app that offers practical financial advice and partners with financial institutions...</p>
+            </li>
+            <li class="orbit-slide text-center">
+              <p>It differs in that users have access to a human "financial concierge"</p>
+            </li>
+            <li class="orbit-slide text-center">
+              <p>Esteemed provides a personalized savings account... but it can also look at existing car insurance policies and credit cards and ferret out better deals.</p>
+            </li>
+            <li class="orbit-slide text-center">
+              <p>The startup offers a simple way to track your finances as well as personalized recommendations aimed at boosting your overall financial standing.</p>
+            </li>
+          </ul>
+          <div class="orbit-container__quote-right">”</div>
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section id="section-09" class="section">
   <div class="grid-container">
     <div class="grid-x align-center-middle">
