Fix spelling errors

--- a/company.html
+++ b/company.html
@@ -21,7 +21,7 @@ permalink: "/company/"
           <div class="simple-card simple-card--narrow">
             <div class="simple-card__image text-center"><img src="/img/esteemed-results.svg"></div>
             <h4 class="simple-card__header text-center u-text-bold">Results</h4>
-            <p class="simple-card__body text-center">Work can be challenging. Esteemed works tirelessly to provide tools that increase effectivness in the workplace and the quality of life of our users.</p>
+            <p class="simple-card__body text-center">Work can be challenging. Esteemed works tirelessly to provide tools that increase effectiveness in the workplace and the quality of life of our users.</p>
           </div>
         </div>
         <div class="cell medium-4">
