--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ permalink: "/"
       <div class="cell medium-6">
         <p class="u-text-bold h4"><span class="icon stars-icon"></span> Contract Staffing</p>
         <h1 class="u-text-bold">Grow with confidence<br />backed by a pre-qualified<br /><span class="u-text-normal u-text-orange">elastic workforce</span></h1>
-        <p class="h5">Expand quickly in Open Source and Propietary systems with a screened contract workforce able to expand and contract as needed.</p>
+        <p class="h5">Expand quickly in Open Source and Proprietary systems with a screened contract workforce able to expand and contract as needed.</p>
       </div>
     </div>
   </div>
@@ -39,7 +39,7 @@ permalink: "/"
   <div class="grid-container">
     <div class="grid-x align-center-middle">
       <div class="cell medium-8">
-        <h3 class="text-center u-text-bold">Request resources and recieve a curated list of qualified talent in a few hours.</h3>
+        <h3 class="text-center u-text-bold">Request resources and receive a curated list of qualified talent in a few hours.</h3>
         <p class="text-center h5 u-trailer">
           Our platforms are communities centered around tools like <strong>Drupal</strong> and
           <strong>WordPress</strong> or disciplines like <strong>UX</strong> and <strong>DevOps</strong>.
