--- a/company.html
+++ b/company.html
@@ -120,7 +120,7 @@ permalink: "/company/"
         <h1 class="u-text-bold">We're growing</h1>
       </div>
       <div class="cell large-6 ">
-        <h2>We are looking to connect with like minded individuals to join us on this incredibile journey.</h2>
+        <h2>We are looking to connect with like minded individuals to join us on this incredible journey.</h2>
       </div>
     </div>
     <div class="grid-x align-center-middle u-leader">
