--- a/blog.html
+++ b/blog.html
@@ -6,16 +6,58 @@ pagination:
   enabled: true
 ---
 
-<div class="grid-container">
-  <div class="grid-x align-top">
-    <h1>Blog</h1>
+{% assign featured_posts = site.posts | where:'featured', true | sort: 'date' | reverse %}
+
+<div class="grid-container page--blog">
+  <h1 class="u-text-bold main-title">Blog</h1>
+  <div class="heading-subtitle">All finance, no filler. We curate and break down the latest news, delivering short takes on the biggest stories in money.</div>
+  <div class="grid-x align-top grid-padding-x blog-featured-posts">
+    {% for featured_post in featured_posts limit:3 %}
+      {% assign author = site.data.authors[featured_post.author] %}
+      <a href="{{ featured_post.url }}" class="blog-card blog-featured-card cell medium-4">
+        <div class="blog-card__wrapper">
+          {% if featured_post.image %}
+            <div class="blog-card__wrapper--image" style="background-image: url('{{ featured_post.image }}'); background-size: cover;">
+            </div>
+          {% endif %}
+          <div class="blog-card__bottom">
+            <h2>{{ featured_post.title }}</h2>
+            <div class="blog-card__bottom--author">{{ author.name }}</div>
+            <div class="blog-card__bottom--date-categories">
+              <span class="blog-card__bottom--date">{{ featured_post.date | date: "%b %d, %Y" }}</span>
+              <span class="blog-card__bottom--line">|</span>
+              <span class="blog-card__bottom--categories">{{ featured_post.categories | first }}</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    {% endfor %}
+  </div>
+
+  <h2 class="u-text-bold">All Posts</h2>
+  <div class="grid-x align-top grid-padding-x blog-all-posts">
     {% for post in paginator.posts %}
     {% assign author = site.data.authors[post.author] %}
-    <div class="cell" style="background:#efefef; margin: 10px 0; padding: 10px">
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <address class="author"><a href="/blogs/author/{{ page.author }}/">{{ author.name }}</a></span></address>
-      {{ post.excerpt | strip_html }}
-    </div>
+    <a href="{{ post.url }}" class="blog-card cell small-6 medium-4">
+        <div class="blog-card__wrapper">
+          {% if post.image %}
+            <div class="blog-card__wrapper--image" style="background-image: url('{{ post.image }}'); background-size: cover;">
+            </div>
+          {% else %}
+            <div class="blog-card__wrapper--image" style="background-image: url('/img/blog-performance.jpg'); background-size: cover;">
+            </div>
+          {% endif %}
+          <div class="blog-card__bottom">
+            <h2>{{ post.title }}</h2>
+            <div class="blog-card__bottom--author">{{ author.name }}</div>
+            <div class="blog-card__bottom--date-categories">
+              <span class="blog-card__bottom--date">{{ post.date | date: "%b %d, %Y" }}</span>
+              <span class="blog-card__bottom--line">|</span>
+              <span class="blog-card__bottom--categories">{{ post.categories | first }}</span>
+            </div>
+          </div>
+        </div>
+      </a>
     {% endfor %}
     </div>
     {% if paginator.total_pages > 1 %}
