Add metadata and headline for blog posts

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 ---
 title: Blogs
+description: If you're growing your business, looking for opportunities, or learning new skills, we're here to help you. Our blog aims to provide advice, support, and the right tools to get you started.
 permalink: /blogs/
 sitemap: false
 pagination:
@@ -10,7 +11,7 @@ pagination:
 
 <div class="grid-container page--blog">
   <h1 class="u-text-bold main-title">Blog</h1>
-  <div class="heading-subtitle">All finance, no filler. We curate and break down the latest news, delivering short takes on the biggest stories in money.</div>
+  <div class="heading-subtitle">Esteemed makes it easier for you to get flexible jobs, meet like-minded colleagues, and build your business with confidence. But we know your work doesn’t stop there. Our blog is here to help! With insights into all aspects of running a remote business, Esteemed helps you succeed.</div>
   <div class="grid-x align-top grid-padding-x blog-featured-posts">
     {% for featured_post in featured_posts limit:3 %}
       {% assign author = site.data.authors[featured_post.author] %}
