Add H1 to partner application page

--- a/partner-registration.html
+++ b/partner-registration.html
@@ -1,5 +1,5 @@
 ---
-title: "Partner Registration"
+title: "Internal Partner Registration"
 permalink: "/partners/partner-registration/"
 ---
 
@@ -7,6 +7,7 @@ permalink: "/partners/partner-registration/"
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-top">
       <div class="cell">
+        <h1>Application: Internal Partners</h1>
         <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
         <script>
           hbspt.forms.create({
