Add description to partner registration page

--- a/partner-registration.html
+++ b/partner-registration.html
@@ -1,5 +1,6 @@
 ---
 title: "Internal Partner Registration"
+description: "Esteemed Internal Partners have access to discount pricing. They can access hundreds on Slack, and thousands in the Talent Network. So the next time a juicy project comes in you'd rather not pass by. Star talent is at your finger tips."
 permalink: "/partners/partner-registration/"
 ---
 
