--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 ---
 title: Blogs
 description: If you're growing your business, looking for opportunities, or learning new skills, we're here to help you. Our blog aims to provide advice, support, and the right tools to get you started.
-permalink: /blogs/
+permalink: /blog/
 sitemap: false
 pagination:
   enabled: true
