EST-60: Internal Partners update title and spacing

--- a/partner-registration.html
+++ b/partner-registration.html
@@ -1,5 +1,5 @@
 ---
-title: "Internal Partner Registration"
+title: "Internal Partner Application"
 description: "Esteemed Internal Partners have access to discount pricing. They can access hundreds on Slack, and thousands in the Talent Network. So the next time a juicy project comes in you'd rather not pass by. Star talent is at your finger tips."
 permalink: "/partners/partner-registration/"
 ---
@@ -8,7 +8,7 @@ permalink: "/partners/partner-registration/"
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-top">
       <div class="cell">
-        <h1>Application: Internal Partners</h1>
+        <h1 class="margin-bottom-2">Internal Partner Application</h1>
         <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
         <script>
           hbspt.forms.create({
