EST-59: Change iframe

--- a/schedule-demo.html
+++ b/schedule-demo.html
@@ -11,7 +11,7 @@ class: "page__schedule-demo"
         <h1>Schedule a Demo</h1>
         <p>Schedule a demo of Esteemed Talent today. In 45 minutes we'll walk you through how our system increases quality and efficiency of hiring digital pros while providing instant access to expert advisors to help scale your business.</p>
         <!-- Calendly inline widget begin -->
-        <div class="calendly-inline-widget" data-url="https://calendly.com/demo-esteemed?text_color=231f20&primary_color=4d64af" style="min-width:320px;height:800px;"></div>
+        <div class="calendly-inline-widget" data-url="https://calendly.com/demo-esteemed/45min?hide_event_type_details=1&text_color=231f20&primary_color=4389c8" style="min-width:320px;height:670px;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
         <!-- Calendly inline widget end -->
       </div>
