EST-52: Sales deck update

--- a/presentations-sales-deck.html
+++ b/presentations-sales-deck.html
@@ -1,7 +1,12 @@
 ---
 title: "Sales Deck"
 permalink: "/presentations/sales-deck/"
+layout: single
 class: page__mobile-nav-hidden
 ---
 
 <div class="sales-deck__wrapper margin-top-3 margin-bottom-3" style="position:relative;width:100%;height:0;padding-bottom:calc(56.25% + 40px);"><iframe allowfullscreen style="position:absolute; width: 100%; height: 100%;border: solid 1px #333;" src="https://www.beautiful.ai/embed/-MCnANh5aFSJwfz-tPwN?utm_source=beautiful_player&utm_medium=embed&utm_campaign=-MCOzu_bOnG1hAlRhkwP"></iframe></div>
+
+<h3 class="margin-top-3">Watch a short video about what we do at esteemed talent.</h3>
+
+<iframe class="margin-top-1 margin-bottom-3" src="https://spark.adobe.com/video/Z6OKyFDuBmY5h/embed" width="960" height="540" frameborder="0" allowfullscreen></iframe>
