EST-52: Sales deck container and video

--- a/presentations-sales-deck.html
+++ b/presentations-sales-deck.html
@@ -9,4 +9,4 @@ class: page__mobile-nav-hidden
 
 <h3 class="margin-top-3">Watch a short video about what we do at esteemed talent.</h3>
 
-<iframe class="margin-top-1 margin-bottom-3" src="https://spark.adobe.com/video/Z6OKyFDuBmY5h/embed" width="960" height="540" frameborder="0" allowfullscreen></iframe>
+<iframe class="sales-deck__video margin-top-1 margin-bottom-3" src="https://spark.adobe.com/video/Z6OKyFDuBmY5h/embed" width="960" height="540" frameborder="0" allowfullscreen></iframe>
