--- a/schedule-demo.html
+++ b/schedule-demo.html
@@ -10,10 +10,46 @@ class: "page__schedule-demo"
       <div class="cell">
         <h1>Schedule a Demo</h1>
         <p>Schedule a demo of Esteemed Talent today. In 45 minutes we'll walk you through how our system increases quality and efficiency of hiring digital pros while providing instant access to expert advisors to help scale your business.</p>
+        <div class="margin-top-2 text-center video__wrapper">
+          <iframe src="https://spark.adobe.com/video/Z6OKyFDuBmY5h/embed" width="960" height="540" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <h2 class="text-center">Watch a 2 minute video on what we do</h2>
         <!-- Calendly inline widget begin -->
         <div class="calendly-inline-widget" data-url="https://calendly.com/demo-esteemed/45min?hide_event_type_details=1&text_color=231f20&primary_color=4389c8" style="min-width:320px;height:670px;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
         <!-- Calendly inline widget end -->
+      </div>
+
+      <div class="cell align-center-middle margin-top-2">
+        <div class="orbit" role="region" aria-label="Favorite Text Ever" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
+          <nav class="orbit-bullets orbit-bullets--no-image">
+            <button class="is-active" data-slide="0">
+              <span class="show-for-sr">Oomph</span><span class="show-for-sr">Current Slide</span>
+            </button>
+            <button data-slide="1">
+              <span class="show-for-sr">Avionos</span>
+            </button>
+            <button data-slide="2">
+              <span class="show-for-sr">FreshForM</span>
+            </button>
+          </nav>
+          <div class="orbit-container__wrapper align-center-middle">
+            <ul class="orbit-container">
+              <li class="orbit-slide text-center">
+                <p><span>“</span>A consistant reliable source for quality Drupal Developers.<span>”</span></p>
+                <p><strong>Matt O'Bryant</strong>, VP Professional Services, Oomph</p>
+              </li>
+              <li class="orbit-slide text-center">
+                <p><span>“</span>High quality resources quickly. We couldn't be more happy with the relationship.<span>”</span></p>
+                <p><strong>Gibson Smith</strong>, CEO Avionos</p>
+              </li>
+              <li class="orbit-slide text-center">
+                <p><span>“</span>The structure of Esteemed is awesome. It saves time in hiring by putting top talent just a message away.<span>”</span></p>
+                <p><strong>Brandon Baker</strong>, VP TechNOLOGY - FreshForM</p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
