EST-67: Update logos, buttons, schedule demo changes

--- a/schedule-demo.html
+++ b/schedule-demo.html
@@ -20,19 +20,8 @@ class: "page__schedule-demo"
         <!-- Calendly inline widget end -->
       </div>
 
-      <div class="cell align-center-middle margin-top-2">
-        <div class="orbit" role="region" aria-label="Favorite Text Ever" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
-          <nav class="orbit-bullets orbit-bullets--no-image">
-            <button class="is-active" data-slide="0">
-              <span class="show-for-sr">Oomph</span><span class="show-for-sr">Current Slide</span>
-            </button>
-            <button data-slide="1">
-              <span class="show-for-sr">Avionos</span>
-            </button>
-            <button data-slide="2">
-              <span class="show-for-sr">FreshForM</span>
-            </button>
-          </nav>
+      <div class="cell align-center-middle margin-top-2 grid-x">
+        <div class="orbit cell medium-8" role="region" aria-label="Favorite Text Ever" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
           <div class="orbit-container__wrapper align-center-middle">
             <ul class="orbit-container">
               <li class="orbit-slide text-center">
@@ -49,6 +38,17 @@ class: "page__schedule-demo"
               </li>
             </ul>
           </div>
+          <nav class="orbit-bullets orbit-bullets--no-image">
+            <button class="is-active" data-slide="0">
+              <span class="show-for-sr">Oomph</span><span class="show-for-sr">Current Slide</span>
+            </button>
+            <button data-slide="1">
+              <span class="show-for-sr">Avionos</span>
+            </button>
+            <button data-slide="2">
+              <span class="show-for-sr">FreshForM</span>
+            </button>
+          </nav>
         </div>
       </div>
     </div>
