--- a/schedule-demo.html
+++ b/schedule-demo.html
@@ -10,14 +10,14 @@ class: "page__schedule-demo"
       <div class="cell">
         <h1>Schedule a Demo</h1>
         <p>Schedule a demo of Esteemed Talent today. In 45 minutes we'll walk you through how our system increases quality and efficiency of hiring digital pros while providing instant access to expert advisors to help scale your business.</p>
-        <div class="margin-top-2 text-center video__wrapper">
-          <iframe src="https://spark.adobe.com/video/Z6OKyFDuBmY5h/embed" width="960" height="540" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <h2 class="text-center">Watch a 2 minute video on what we do</h2>
         <!-- Calendly inline widget begin -->
         <div class="calendly-inline-widget" data-url="https://calendly.com/demo-esteemed/45min?hide_event_type_details=1&text_color=231f20&primary_color=4389c8" style="min-width:320px;height:670px;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
         <!-- Calendly inline widget end -->
+        <h2 class="margin-top-3 text-center">Watch a 2 minute video on what we do</h2>
+        <div class="margin-top-2 text-center video__wrapper">
+          <iframe src="https://spark.adobe.com/video/Z6OKyFDuBmY5h/embed" width="960" height="540" frameborder="0" allowfullscreen></iframe>
+        </div>       
       </div>
 
       <div class="cell align-center-middle margin-top-2 grid-x">
