--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ permalink: "/"
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-top">
       <div class="cell medium-6 small-order-2 medium-order-1">
-        <h1 class="u-text-bold main-title">Engage a trusted colleague.</h1>
+        <h1 class="u-text-bold main-title">Hire a trusted colleague.</h1>
         <p class="h5 main-text-description">Esteemed finds the team members you need, before you need them, so you can scale with confidence.</p>
-        <button class="button">Get Started Now</button>
+        <a href="#contact-form" class="button button__small">Get Started Now</a>
       </div>
-      <div class="cell medium-6 small-order-1 medium-order-2">
+      <div class="cell medium-6 small-order-1 medium-order-2 small-margin-bottom-2">
         <img src="/img/main-hero.svg">
       </div>
     </div>
@@ -21,14 +21,23 @@ permalink: "/"
 
 <section id="section-02" class="section">
   <div class="grid-container">
-    <div class="grid-x align-middle">
+    <div class="grid-x align-center-middle margin-bottom-2">
       <div class="cell medium-6">
-        <img src="/img/esteemed-hero-image.png">
+        <h2 class="text-center u-text-bold">Reduce Costs, Increase flexibility, deliver better.</h2>
+        <p class="text-center h5 u-trailer">
+          Esteemed pre-screens the bench for tough hires for you.
+        </p>
+      </div>
+    </div>
+    <div class="grid-x grid-padding-x align-middle">
+      <div class="cell medium-6 text-center small-margin-bottom-2">
+        <img class="width-75" src="/img/mobile-profiles.svg">
       </div>
       <div class="cell medium-6">
-        <p class="u-text-bold h4"><span class="icon stars-icon"></span> Contract Staffing</p>
-        <h1 class="u-text-bold">Grow with confidence<br />backed by a pre-qualified<br /><span class="u-text-normal u-text-orange">elastic workforce</span></h1>
-        <p class="h5">Expand quickly in Open Source and Proprietary systems with a screened contract workforce able to expand and contract as needed.</p>
+        <h3 class="u-text-bold">Talent Management</h3>
+        <p class="h5 margin-bottom-2">The Esteemed Talent Network provides instant access to thousands of pre-screened digital professionals in hard-to-hire specialties.</p>
+        <p class="h5 margin-bottom-2">Our experienced Technical Leads present qualified talent and collaborate closely to ensure clients find the right fit fast.</p>
+        <a href="#contact-form" class="button__no-bg" href="">Get Started</a>
       </div>
     </div>
   </div>
@@ -36,14 +45,15 @@ permalink: "/"
 
 <section id="section-03" class="section">
   <div class="grid-container">
-    <div class="grid-x align-center-middle">
-      <div class="cell medium-8">
-        <h3 class="text-center u-text-bold">Request resources and receive a curated list of qualified talent in a few hours.</h3>
-        <p class="text-center h5 u-trailer">
-          Our platforms are communities centered around tools like <strong>Drupal</strong> and
-          <strong>WordPress</strong> or disciplines like <strong>UX</strong> and <strong>DevOps</strong>.
-          <img class="u-leader" src="/img/esteemed-curated-resources.png">
-        </p>
+    <div class="grid-x grid-padding-x align-middle">
+      <div class="cell medium-6 small-order-2 medium-order-1">
+        <h3 class="u-text-bold">Expand capacity instantly</h3>
+        <p class="h5 margin-bottom-2">Esteemed collaborates via the tools you already use like Slack. All subscribers receive a dedicated channel and Team Lead.</p>
+        <p class="h5 margin-bottom-2">Make requests and be connected to qualified candidates within 30 minutes* and be working within the hour, guaranteed.</p>
+        <a href="#contact-form" class="button__no-bg" href="">Subscribe now</a>
+      </div>
+      <div class="cell medium-6 small-order-1 medium-order-2 small-margin-bottom-2">
+        <img src="/img/desktop-slide.svg">
       </div>
     </div>
   </div>
@@ -51,141 +61,107 @@ permalink: "/"
 
 <section id="section-04" class="section">
   <div class="grid-container">
-    <div class="grid-x align-middle">
-      <div class="cell medium-6">
-        <p class="sup-head">Screening</p>
-        <h2 class="u-text-bold">Perfect the hiring process<br />with expert pre-screening</h2>
-        <p class="h5">Every specialty has incredible depth that is best evaluated by those who are experts in the field. Speed workforce growth with confidence knowing resources have been reviewed by a senior <strong>esteemed</strong> colleague from that community.</p>
+    <div class="grid-x grid-padding-x align-middle">
+      <div class="cell medium-6 text-center small-margin-bottom-2">
+        <img class="width-75" src="/img/trusted-advisors.svg">
       </div>
       <div class="cell medium-6">
-        <img src="/img/esteemed-screening.png">
+        <h3 class="u-text-bold">Trusted advisors</h3>
+        <p class="h5 margin-bottom-2">Esteemed offers access to managers from technical team leads to product or category consultants, to fractional executives.</p>
+        <p class="h5 margin-bottom-2">Whatever resources and advice you need to grow your business. Just make a request and we'll make the connection.</p>
+        <a href="/pricing/" class="button__no-bg" href="">Learn more</a>
       </div>
     </div>
   </div>
 </section>
 
-<section id="section-05" class="section">
-  <div class="grid-container">
-    <div class="grid-x grid-padding-x">
-      <div class="cell medium-4">
-        <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/esteemed-request-resources.png"></div>
-          <h4 class="simple-card__header u-text-bold">Request resources</h4>
-          <p class="simple-card__body">Give us some details on your project and resources needs.</p>
-        </div>
-      </div>
-      <div class="cell medium-4">
-        <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/esteemed-curated-lists.png"></div>
-          <h4 class="simple-card__header u-text-bold">Curated lists</h4>
-          <p class="simple-card__body">A list of qualified resources is assembled for your review.</p>
-        </div>
-      </div>
-      <div class="cell medium-4">
-        <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/esteemed-flexible-hiring.png"></div>
-          <h4 class="simple-card__header u-text-bold">Flexible hiring</h4>
-          <p class="simple-card__body">Hire contract, contract to hire, or permanent resources.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="section-06" class="section texture--above texture--below u-bg-blue u-text-white">
-  <div class="grid-container">
-    <div class="text-center"><span class="icon stars-centered-icon"></span></div>
-    <h2 class="text-center u-trailer"><strong>Join the many growing businesses using<br /></strong> esteemed <strong>to grow their workforce</strong></h2>
-    <div class="cell text-center"><button class="button orange">Get started</button></div>
-  </div>
-</section>
-
-<section id="section-07" class="section">
+<section id="section-05" class="section texture--below">
   <div class="grid-container">
     <div class="grid-x align-center-middle">
-      <div class="cell medium-6 text-center medium-text-left">
-        <div><img src="/img/esteemed-community-powered.png"></div>
+      <h2 class="text-center u-text-bold margin-bottom-3">How it works</h2>
+    </div>
+    <div class="grid-x grid-padding-x text-center">
+      <div class="cell medium-4">
+        <div class="simple-card simple-card--narrow">
+          <div class="simple-card__image text-center"><img src="/img/icon-brands.svg"></div>
+          <h4 class="simple-card__header u-text-bold">For Brands</h4>
+          <p class="simple-card__body margin-bottom-1">Scale digital teams quickly with access to 10,000+ pre-screened contractors in hard-to-hire categories.</p>
+          <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
+        </div>
       </div>
-      <div class="cell medium-6">
-        <div class="grid-x grid-padding-x small-padding-collapse">
-          <div class="cell">
-            <p class="sup-head">Community Powered</p>
-            <h2 class="u-text-bold">Engage experts quickly with flexible options</h2>
-            <p class="h5">Specialties are a world unto themselves. Our platforms are deeply rooted in their niche communities and include top contributors who help identify the next rising stars.</p>
-          </div>
-          <div class="cell medium-6">
-            <div class="simple-card">
-              <div class="simple-card__icon"><img src="/img/esteemed-add-capacity.png"></div>
-              <h5 class="simple-card__title u-text-bold">Add capacity</h5>
-              <p class="simple-card__body">Assemble Teams of dedicated or part-time resources.</p>
-            </div>
-          </div>
-          <div class="cell medium-6">
-            <div class="simple-card">
-              <div class="simple-card__icon"><img src="/img/esteemed-contract-permanent.png"></div>
-              <h5 class="simple-card__title u-text-bold">Contract or permanent</h5>
-              <p class="simple-card__body">Engage for any size project or long term hire.</p>
-            </div>
-          </div>
-          <div class="cell medium-6">
-            <div class="simple-card">
-              <div class="simple-card__icon"><img src="/img/esteemed-senior-leadership.png"></div>
-              <h5 class="simple-card__header u-text-bold">Senior leadership</h5>
-              <p class="simple-card__body">Access fractional leadership for reviews and guidance</p>
-            </div>
-          </div>
-          <div class="cell medium-6">
-            <div class="simple-card">
-              <div class="simple-card__icon"><img src="/img/esteemed-account-management.png"></div>
-              <h5 class="simple-card__header u-text-bold">Account management</h5>
-              <p class="simple-card__body">A dedicated manager and single point of contact.</p>
-            </div>
-          </div>
+      <div class="cell medium-4">
+        <div class="simple-card simple-card--narrow">
+          <div class="simple-card__image text-center"><img src="/img/icon-agencies.svg"></div>
+          <h4 class="simple-card__header u-text-bold">For Agencies</h4>
+          <p class="simple-card__body margin-bottom-1">Hire agency experiences talent. Manage unlimited clients, projects and contractors all in one place.</p>
+          <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
+        </div>
+      </div>
+      <div class="cell medium-4">
+        <div class="simple-card simple-card--narrow">
+          <div class="simple-card__image text-center"><img src="/img/icon-talent.svg"></div>
+          <h4 class="simple-card__header u-text-bold">For Talent</h4>
+          <p class="simple-card__body margin-bottom-1">Build pipelines to top agencies and brands, find quality projects and get paid quickly.</p>
+          <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<section id="section-09" class="section">
+<section id="section-06" class="section texture--above texture--below u-bg-lighter-gray">
   <div class="grid-container">
-    <div class="grid-x align-center-middle">
+    <div class="grid-x grid-padding-x align-middle">
       <div class="cell medium-6">
-        <p class="sup-head">Tools</p>
-        <h2 class="u-text-bold">Redefine your capacity with a dynamic team</h2>
-        <p>Build your business with confidence. We work together with your team to plan, screen and schedule resources for upcoming projects and open roles.</p>
+        <img class="esteemed-talent-logo margin-bottom-1" src="/img/esteemed-talent-logo.svg">
+        <h3 class="margin-bottom-1 width-75"><span class="u-text-bold">You plan digital projects every day. Plan your team with</span> esteemed talent.</h3>
+        <p class="h6 margin-bottom-2">By combining human insight with cutting-edge tools and automation, <strong>esteemed talent</strong> powers your staffing landscape. Streamline your delivery model, grow with confidence and get reliable talent on-demand.</p>
+        <p class="h6 margin-bottom-2">Your esteemed team is made up of experienced managers and engineers who can help you achieve your goals.</p>
+        <a href="#contact-form" href="" class="button black button__small">Subscribe Now</a>
       </div>
       <div class="cell medium-6">
-        <div><img src="/img/esteemed-redefine.png"></div>
+        <img src="/img/digital_projects_pair_of_coders.svg">
       </div>
     </div>
-    <div class="grid-x grid-padding-x">
-      <div class="cell medium-6 large-3">
-        <div class="simple-card">
-          <div class="simple-card__icon"><img src="/img/esteemed-slack.png"></div>
-          <h5 class="simple-card__title u-text-bold">Slack</h5>
-          <p class="simple-card__body">A community of hundreds of pre-screened experts are just a message away.</p>
-        </div>
-      </div>
-      <div class="cell medium-6 large-3">
-        <div class="simple-card">
-          <div class="simple-card__icon"><img src="/img/esteemed-billing.png"></div>
-          <h5 class="simple-card__title u-text-bold">Billing</h5>
-          <p class="simple-card__body">Multiple projects across the talent spectrum on one itemized bill.</p>
-        </div>
-      </div>
-      <div class="cell medium-6 large-3">
-        <div class="simple-card">
-          <div class="simple-card__icon"><img src="/img/esteemed-planning.png"></div>
-          <h5 class="simple-card__title u-text-bold">Capacity Planning</h5>
-          <p class="simple-card__body">We use the latest tools for enterprise growth like 10,000ft.com.</p>
-        </div>
-      </div>
-      <div class="cell medium-6 large-3">
-        <div class="simple-card">
-          <div class="simple-card__icon"><img src="/img/esteemed-project-management.png"></div>
-          <h5 class="simple-card__title u-text-bold">Project management</h5>
-          <p class="simple-card__body">Add resources to Jira or Microsoft Teams and assign tasks as needed.</p>
+  </div>
+</section>
+
+<section id="section-07" class="section section__testimonial">
+  <div class="grid-container">
+    <div class="grid-x align-center-middle margin-bottom-3">
+      <h2 class="text-center u-text-bold">The good word on esteemed</h2>
+    </div>
+    <div class="align-center-middle">
+      <div class="orbit" role="region" aria-label="Favorite Text Ever" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
+        <nav class="orbit-bullets">
+          <button class="is-active" data-slide="0">
+            <span class="show-for-sr">Oomph</span><span class="show-for-sr">Current Slide</span>
+            <img src="/img/logo-oomph.svg">
+          </button>
+          <button data-slide="1">
+            <span class="show-for-sr">Avionos</span>
+            <img src="/img/logo-avionos.svg">
+          </button>
+          <button data-slide="2">
+            <span class="show-for-sr">FreshForM</span>
+            <img src="/img/logo-freshform.svg">
+          </button>
+        </nav>
+        <div class="orbit-container__wrapper align-center-middle">
+          <ul class="orbit-container">
+            <li class="orbit-slide text-center">
+              <p><span>“</span>A consistant reliable source for quality Drupal Developers.<span>”</span></p>
+              <p><strong>Matt O'Bryant</strong>, VP Professional Services, Oomph</p>
+            </li>
+            <li class="orbit-slide text-center">
+              <p><span>“</span>High quality resources quickly. We couldn't be more happy with the relationship.<span>”</span></p>
+              <p><strong>Gibson Smith</strong>, CEO Avionos</p>
+            </li>
+            <li class="orbit-slide text-center">
+              <p><span>“</span>The structure of Esteemed is awesome. It saves time in hiring by putting top talent just a message away.<span>”</span></p>
+              <p><strong>Brandon Baker</strong>, VP TechNOLOGY - FreshForM</p>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
