--- a/schedule-demo.html
+++ b/schedule-demo.html
@@ -34,7 +34,7 @@ class: "page__schedule-demo"
               </li>
               <li class="orbit-slide text-center">
                 <p><span>“</span>The structure of Esteemed is awesome. It saves time in hiring by putting top talent just a message away.<span>”</span></p>
-                <p><strong>Brandon Baker</strong>, VP TechNOLOGY - FreshForM</p>
+                <p><strong>Brandon Baker</strong>, VP Technology - FreshForm</p>
               </li>
             </ul>
           </div>
@@ -46,7 +46,7 @@ class: "page__schedule-demo"
               <span class="show-for-sr">Avionos</span>
             </button>
             <button data-slide="2">
-              <span class="show-for-sr">FreshForM</span>
+              <span class="show-for-sr">FreshForm</span>
             </button>
           </nav>
         </div>
