--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ permalink: "/"
   <div class="grid-container">
     <div class="grid-x align-center-middle margin-bottom-2">
       <div class="cell medium-6">
-        <h2 class="text-center u-text-bold">Reduce Costs, Increase flexibility, deliver better.</h2>
+        <h2 class="text-center u-text-bold">Reduce costs. Increase flexibility. Deliver better.</h2>
         <p class="text-center h5 u-trailer">
           Esteemed pre-screens the bench for tough hires for you.
         </p>
@@ -68,7 +68,7 @@ permalink: "/"
       <div class="cell medium-6">
         <h3 class="u-text-bold">Trusted advisors</h3>
         <p class="h5 margin-bottom-2">Esteemed offers access to managers from technical team leads to product or category consultants, to fractional executives.</p>
-        <p class="h5 margin-bottom-2">Whatever resources and advice you need to grow your business. Just make a request and we'll make the connection.</p>
+        <p class="h5 margin-bottom-2">Whatever resources and advice you need to grow your business, just make a request and we'll make the connection.</p>
         <a href="/pricing/" class="button__no-bg" href="">Learn more</a>
       </div>
     </div>
@@ -93,7 +93,7 @@ permalink: "/"
         <div class="simple-card simple-card--narrow">
           <div class="simple-card__image text-center"><img src="/img/icon-agencies.svg"></div>
           <h4 class="simple-card__header u-text-bold">For Agencies</h4>
-          <p class="simple-card__body margin-bottom-1">Hire agency experiences talent. Manage unlimited clients, projects and contractors all in one place.</p>
+          <p class="simple-card__body margin-bottom-1">Hire agency-experienced talent. Manage unlimited clients, projects and contractors all in one place.</p>
           <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
         </div>
       </div>
@@ -101,7 +101,7 @@ permalink: "/"
         <div class="simple-card simple-card--narrow">
           <div class="simple-card__image text-center"><img src="/img/icon-talent.svg"></div>
           <h4 class="simple-card__header u-text-bold">For Talent</h4>
-          <p class="simple-card__body margin-bottom-1">Build pipelines to top agencies and brands, find quality projects and get paid quickly.</p>
+          <p class="simple-card__body margin-bottom-1">Build pipelines to top agencies and brands. Find quality projects and get paid quickly.</p>
           <a href="/pricing/" class="button__no-bg align-center-middle" href="">Learn More</a>
         </div>
       </div>
@@ -150,11 +150,11 @@ permalink: "/"
         <div class="orbit-container__wrapper align-center-middle">
           <ul class="orbit-container">
             <li class="orbit-slide text-center">
-              <p><span>“</span>A consistant reliable source for quality Drupal Developers.<span>”</span></p>
+              <p><span>“</span>A consistent, reliable source for quality Drupal Developers.<span>”</span></p>
               <p><strong>Matt O'Bryant</strong>, VP Professional Services, Oomph</p>
             </li>
             <li class="orbit-slide text-center">
-              <p><span>“</span>High quality resources quickly. We couldn't be more happy with the relationship.<span>”</span></p>
+              <p><span>“</span>High-quality resources quickly. We couldn't be more happy with the relationship.<span>”</span></p>
               <p><strong>Gibson Smith</strong>, CEO Avionos</p>
             </li>
             <li class="orbit-slide text-center">
