--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ permalink: "/"
             <img src="/img/logo-avionos.svg">
           </button>
           <button data-slide="2">
-            <span class="show-for-sr">FreshForM</span>
+            <span class="show-for-sr">FreshForm</span>
             <img src="/img/logo-freshform.svg">
           </button>
         </nav>
@@ -159,7 +159,7 @@ permalink: "/"
             </li>
             <li class="orbit-slide text-center">
               <p><span>“</span>The structure of Esteemed is awesome. It saves time in hiring by putting top talent just a message away.<span>”</span></p>
-              <p><strong>Brandon Baker</strong>, VP TechNOLOGY - FreshForM</p>
+              <p><strong>Brandon Baker</strong>, VP Technology - FreshForm</p>
             </li>
           </ul>
         </div>
